other/require-image-checksum/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
  labels:
    app: myapp-1
spec:
  initContainers:
  - name: init-myservice
    image: busybox
    command: ['sh', '-c', 'echo Initializing...']
  containers:
  - name: nginx
    image: nginx@sha256:353c20f74d9b6aee359f30e8e4f69c3d7eaea2f610681c4a95849a2fd7c497f9
  ephemeralContainers:
  - name: debug-container
    image: busybox
    command: ['sh', '-c', 'sleep 1000']

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    app: myapp-2
spec:
  initContainers:
  - name: init-myservice
    image: busybox@sha256:9ae97d36d26566ff84e8893c64a6dc4fe8ca6d1144bf5b87b2b85a32def253c7
    command: ['sh', '-c', 'echo Initializing...']
  containers:
  - name: nginx
    image: nginx@sha256:353c20f74d9b6aee359f30e8e4f69c3d7eaea2f610681c4a95849a2fd7c497f9
  ephemeralContainers:
  - name: debug-container
    image: busybox@sha256:9ae97d36d26566ff84e8893c64a6dc4fe8ca6d1144bf5b87b2b85a32def253c7
    command: ['sh', '-c', 'sleep 1000']

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      initContainers:
      - name: init-myservice
        image: busybox
        command: ['sh', '-c', 'echo Initializing...']
      containers:
      - name: nginx
        image: nginx@sha256:353c20f74d9b6aee359f30e8e4f69c3d7eaea2f610681c4a95849a2fd7c497f9
        ports:
        - containerPort: 80
      ephemeralContainers:
      - name: debug-container
        image: busybox
        command: ['sh', '-c', 'sleep 1000']

---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: hello
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: init-myservice
            image: busybox
            command: ['sh', '-c', 'echo Initializing...']
          containers:
          - name: hello
            image: busybox
            imagePullPolicy: IfNotPresent
            command:
            - /bin/sh
            - -c
            - date; echo Hello from the Kubernetes cluster
          ephemeralContainers:
          - name: debug-container
            image: busybox
            command: ['sh', '-c', 'sleep 1000']
          restartPolicy: OnFailure
